--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,5 +24,15 @@ services:
     depends_on:
       - postgres
 
+  redis:
+    image: redis:latest
+    container_name: redis
+    restart: always
+    ports:
+      - '6379:6379'
+    volumes:
+      - redisdata:/data
+
 volumes:
   pgdata:
+  redisdata:
