--- a/.env.example
+++ b/.env.example
@@ -10,10 +10,7 @@ DB_DATABASE=mydb
 
 NODE_ENV=development
 
-AUTH_COOKIE=auth
-REFRESH_COOKIE=refresh
-AUTH_TOKEN_EXPIRATION=100000
-REFRESH_TOKEN_EXPIRATION=100000
+REDIS_URL=redis://localhost:6379
 
-JWT_AUTH_SECRETKEY=secret
-JWT_REFRESH_SECRETKEY=secret
+SESSION_EXPIRATION_SEC=3600
+SESSION_COOKIE_NAME=sessionId
