--- a/package.json
+++ b/package.json
@@ -16,11 +16,9 @@
     "cookie-parser": "^1.4.7",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.3",
     "redis": "^4.7.1",
     "reflect-metadata": "^0.2.2",
-    "typeorm": "^0.3.25",
     "zod": "^4.0.17"
   },
   "devDependencies": {
@@ -28,8 +26,8 @@
     "@types/bcrypt": "^6.0.0",
     "@types/cookie-parser": "^1.4.9",
     "@types/express": "^5.0.3",
-    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.3.0",
+    "@types/pg": "^8.15.5",
     "@types/supertest": "^6.0.3",
     "supertest": "^7.1.4",
     "ts-node": "^10.9.2",
