--- a/.env.example-dev
+++ b/.env.example-dev
@@ -2,7 +2,7 @@ PORT=3000
 BACKEND_DOMAIN=localhost
 FRONTEND_DOMAIN=localhost
 
-DB_HOST=postgres
+DB_HOST=localhost
 DB_PORT=5432
 DB_USERNAME=myuser
 DB_PASSWORD=mypassword
@@ -10,7 +10,7 @@ DB_DATABASE=mydb
 
 NODE_ENV=development
 
-REDIS_URL=redis://redis:6379
+REDIS_URL=redis://localhost:6379
 
 SESSION_EXPIRATION_SEC=3600
 SESSION_COOKIE_NAME=sessionId
