chore: docker works correctly

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+÷If you want to run the application inside docker, copy this file to `.env` and adjust the variables as needed.
+
 PORT=3000
 BACKEND_DOMAIN=localhost
 FRONTEND_DOMAIN=localhost
