--- a/.env.example-dev
+++ b/.env.example-dev
@@ -1,3 +1,5 @@
+#If you want to run the application outside docker, copy this file to `.env` and adjust the variables as needed. 
+
 PORT=3000
 BACKEND_DOMAIN=localhost
 FRONTEND_DOMAIN=localhost
